# tetris

./: .gitignore  LICENSE  README.md  __init__.py  io.py  math.py  mesh.py  pyproject.toml
assets/: blockMeshDict
src/tetris/: __init__.py  elements.py  io.py  mesh.py  template.py  utils.py
src/tetris/mesh/: elements.py  io.py  mesh.py
src/tetris/utils/: block.py  math.py
tetris/: __init__.py  constants.py  elements.py  io.py  mesh.py  template.py  typing.py  utils.py
tetris/blockmesh/: __init__.py  block.py  edge.py  geometry.py  patch.py  vertex.py
