[tool.poetry]
name = "tetris"
version = "0.1"
description = "A minimal Python wrapper around OpenFOAM's blockMesh."
license = "MIT"
readme = "README.md"
authors = ["Gabriel B. Santos <gabriel.bertacco@unesp.br>"]
repository = "https://github.com/gabrielbdsantos/tetris"
keywords = ["openfoam", "blockmesh", "structured mesh"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.20"
Jinja2 = "^3.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
